feat: initial project setup with frontend and admin CMS

--- a/.htaccess
+++ b/.htaccess
@@ -1,18 +1,26 @@
 RewriteEngine On
 RewriteBase /
 
-# Remove .php extension
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}\.php -f
-RewriteRule ^([^\.]+)$ $1.php [NC,L]
+# Admin routes, API, and static assets (don't rewrite) - CHECK FIRST
+RewriteCond %{REQUEST_URI} ^/cms-panel-2024/ [OR]
+RewriteCond %{REQUEST_URI} ^/api/ [OR]
+RewriteCond %{REQUEST_URI} ^/assets/ [OR]
+RewriteCond %{REQUEST_URI} ^/uploads/ [OR]
+RewriteCond %{REQUEST_URI} ^/logs/
+RewriteRule ^ - [L]
+
+# Blog post routing - MUST come before general .php extension rule
+RewriteRule ^blog/([a-z0-9-]+)/?$ blog.php?slug=$1 [L,QSA]
 
 # Remove trailing slash
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)/$ /$1 [R=301,L]
 
-# Blog post routing
-RewriteRule ^blog/([a-z0-9-]+)/?$ blog.php?slug=$1 [L,QSA]
-
+# Remove .php extension (general rule - comes after blog routing)
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME}\.php -f
+RewriteRule ^([^\.]+)$ $1.php [NC,L]
 
 # Prevent directory listing
 Options -Indexes
@@ -40,4 +48,3 @@ Options -Indexes
     ExpiresByType text/css "access plus 1 month"
     ExpiresByType application/javascript "access plus 1 month"
 </IfModule>
-
